<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_main"
    android:orientation="vertical"
    android:id="@+id/fragment_container_home">

    <TextView
        android:id="@+id/text_view_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="end"
        android:textAppearance="@style/textnumberinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_margin="5dp"
            android:layout_marginTop="6dp"
            android:text=""
            android:padding="5dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="end"
            android:textAppearance="@style/textnumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_input" />



    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:orientation="horizontal"
        android:layout_weight="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/row_2">

        <Button
            android:id="@+id/button_AC"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_ac"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textAppearance="@style/ac" />

        <ImageView
            android:id="@+id/button_delete"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_delete"
            android:gravity="center"
            android:padding="24dp"
            android:src="@drawable/ic_delete" />
        <Button
            android:id="@+id/button_chia"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_phep_tinh"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/chia"
            android:layout_weight="1"
            android:textAppearance="@style/pheptinh" />

        <Button
            android:id="@+id/button_nhan"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_phep_tinh"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/nhan"
            android:textAppearance="@style/pheptinh" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_weight="4"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/row_3">

        <Button
            android:id="@+id/button_7"
            android:layout_width="80dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/bay"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="80dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/tam"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="80dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/chin"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_tru"
            android:layout_width="80dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_phep_tinh"
            android:gravity="center"
            android:text="@string/tru"
            android:textAppearance="@style/pheptinh" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintBottom_toTopOf="@id/row_4"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/button_4"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/bon"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/nam"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/sau"
            android:textAppearance="@style/chuso" />




    </LinearLayout>

    <LinearLayout

        android:id="@+id/row_4"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintBottom_toTopOf="@id/row_5"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/button_1"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/mot"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/hai"
            android:textAppearance="@style/chuso" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_so"
            android:gravity="center"
            android:text="@string/ba"
            android:textAppearance="@style/chuso" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_5"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <Button
            android:id="@+id/button_0"
            android:layout_width="148dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_0"
            android:text="@string/khong"
            android:layout_weight="1"
            android:textAppearance="@style/chuso" />
        <Button
            android:id="@+id/button_cham"
            android:layout_width="70dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_so"
            android:text="@string/thapphan"
            android:layout_weight="1"
            android:textAppearance="@style/chuso" />





    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/row_2"
        app:layout_constraintStart_toEndOf="@id/row_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


    <Button
        android:id="@+id/button_cong"
        android:layout_width="70dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_cong"
        android:text="@string/cong"
        android:textAppearance="@style/pheptinh" />
    <Button
        android:id="@+id/button_bang"
        android:layout_width="70dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/button_bang"
        android:text="@string/bang"
        android:textAppearance="@style/bang"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>